scrollbar of compose bugfix k1 speciall

--- a/src/app/messages/partials/quick-message/quick-msg.scss
+++ b/src/app/messages/partials/quick-message/quick-msg.scss
@@ -13,6 +13,9 @@
         left: -4px;
       }
     }
+    .editor-btn {
+      display: none;
+    }
     .quick-message {
       z-index: 10;
       border: 1px solid $color-border;
