--- a/src/stylesheets/partials/modal.scss
+++ b/src/stylesheets/partials/modal.scss
@@ -235,6 +235,9 @@ body.modal-open {
   background-color: transparent;
   border-radius: 0!important;
   margin: 0;
+  #editor-btn-quick {
+    display: none;
+  }
   .modal-content {
     position: relative;
     top: 150px;
@@ -246,7 +249,7 @@ body.modal-open {
     border-radius: 4px;
     >div {
       min-height: 480px;
-      max-height: calc(90vh - 160px);
+      max-height: calc(100vh - 160px);
     }
     .ui-select-multiple.ui-select-bootstrap input.ui-select-search ,
     .ui-select-multiple.ui-select-bootstrap {
@@ -310,10 +313,10 @@ body.modal-open {
     }
   }
   .compose-modal-body {
-    margin: 48px 0 96px 0;
+    margin: 48px 0 0 0;
     padding: 0 16px;
     height: calc(100% - 144px);
-    max-height: calc(90vh - 304px);
+    max-height: calc(100vh - 408px);
     //overflow-y: scroll;
     //overflow-x: hidden;
     >p {
@@ -328,7 +331,7 @@ body.modal-open {
     display: flex;
     align-items: center;
     flex-direction: row;
-    position: absolute;
+    // position: absolute;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -356,7 +359,7 @@ body.modal-open {
   .editor-butns-wrapper {
     height: 48px;
     // width: 100%;
-    position: absolute;
+    // position: absolute;
     left: 0;
     bottom: 48px;
     padding: 0 16px;
